Closed Bug 684485 Opened 13 years ago Closed 12 years ago

crash in nsAbCardProperty::SetPropertyAsAString before trying to use nsDependentCString

Categories

(MailNews Core :: Address Book, defect)

x86_64
Windows 7
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 18.0

People

(Reporter: wsmwk, Assigned: aceman)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #684481 +++

crash in nsAbCardProperty::SetPropertyAsAString before trying to use nsDependentCString

bp-009cd991-f43b-45e2-8d7e-ca14b2110831
EXCEPTION_ACCESS_VIOLATION_READ
0x0
0	mozcrt19.dll	strlen	strlen.asm:81
1	xul.dll	nsDependentCString::nsDependentCString	objdir-tb/mozilla/dist/include/nsTDependentString.h:90
2	xul.dll	nsAbCardProperty::SetPropertyAsAString	mailnews/addrbook/src/nsAbCardProperty.cpp:314
3	xul.dll	nsAddrDatabase::InitCardFromRow	mailnews/addrbook/src/nsAddrDatabase.cpp:2473
4	xul.dll	nsAddrDatabase::CreateCard	mailnews/addrbook/src/nsAddrDatabase.cpp:2966
5	xul.dll	nsAddrDatabase::GetCardFromAttribute	mailnews/addrbook/src/nsAddrDatabase.cpp:3161
6	xul.dll	nsAbMDBDirectory::CardForEmailAddress	mailnews/addrbook/src/nsAbMDBDirectory.cpp:1086
I was going to suggest an add-on issue, however, this looks like the column name in the mork file is "".

Not sure if David or Mike have any ideas here, but a starter would be to add a NS_ENSURE_ARG_POINTER to SetPropertyAsString (and related functions in that file) - which we should probably have anyway, as xpcom rules require us to be able to handle null.
Assignee: nobody → acelists
Attached patch patchSplinter Review
Attachment #656989 - Flags: review?(mconley)
Attachment #656989 - Flags: feedback?(mbanner)
Status: NEW → ASSIGNED
Comment on attachment 656989 [details] [diff] [review]
patch

Review of attachment 656989 [details] [diff] [review]:
-----------------------------------------------------------------

Yep, this looks like the right thing to do. Thanks aceman!
Attachment #656989 - Flags: review?(mconley) → review+
Comment on attachment 656989 [details] [diff] [review]
patch

Yep, if we're not getting a name, erroring out is the right thing to do.
Attachment #656989 - Flags: feedback?(mbanner)
Keywords: checkin-needed
https://hg.mozilla.org/comm-central/rev/721cec51e685
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Flags: in-testsuite-
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 18.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: