Bug 684485 - Add checks into nsAbCardProperty::SetPropertyAsAString and similar functions. r=mconley